jpo-server/templates/ingress.yaml
# ingressroute-flask-upload.yaml

# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: flask-upload-ingressroute
#   namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`poc.faf.dev.gcp.renault.com`)  # Assurez-vous que le DNS pointe vers le cluster
#       kind: Rule
#       services:
#         - name: flask-upload-server
#           port: 5000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-upload-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: 10000
spec:
  rules:
    - host: poc.faf.dev.gcp.renault.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-upload-server
                port:
                  number: 5000
